bug fix: 1. operator precedence 2. global array initialization 3. passed most of the functional tests